LU-19102 llog: enospc catalog fix

A race condition may occur between llog_cat_cleanup() and
llog_cat_new_log(), resulting in error -28:
llog_cat_new_log()) kjcf05-MDT0000-osd: there are no more free slots
 in catalog [0x20044e180:0x1:0x0]

Thread 1:
llog_cat_cleanup
    llog_cat_set_first_idx
->
    llog_cancel_rec
Thread 2:
llog_cat_add_rec
->  llog_cat_new_log

The catalog wrap logic relies on three variables: llh_cat_idx,
lgh_last_idx, and llh_count. In llog_cat_cleanup(), the current
implementation first updates llh_cat_idx and then decrements
llh_count. This sequence creates a potential error scenario when
llh_count is greater than 1 when the values llh_cat_idx and
lgh_last_idx are equal. Reversing the order of these operations
(decrementing llh_count before updating llh_cat_idx) resolves the
issue by ensuring consistency during llog_cat_new_log() access.

HPE-bug-id: LUS-12875
Signed-off-by: Alexander Boyko <alexander.boyko@hpe.com>
Change-Id: I4f6b94993a44925ee25d149c28ac0a071a995d63
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/59730
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andriy Skulysh <andriy.skulysh@hpe.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>